<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseLayout"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/increment"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="60dp">

        <ru.klops.klops.custom.TextViewProRegular
            android:id="@+id/incrementTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/bigFont"
            android:textColor="@color/darkGreyText"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:id="@+id/splitIncMiddle"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/increment"
        android:background="@color/darkGreyText" />

    <RelativeLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_below="@+id/splitIncMiddle"
        android:layout_height="60dp">

        <ru.klops.klops.custom.TextViewProRegular
            android:id="@+id/middleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/middle"
            android:textColor="@color/darkGreyText"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:id="@+id/splitMiddleDec"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/middle"
        android:background="@color/darkGreyText" />

    <RelativeLayout
        android:id="@+id/decrement"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_below="@+id/splitMiddleDec"
        android:layout_height="60dp">

        <ru.klops.klops.custom.TextViewProRegular
            android:id="@+id/decrementTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/dec"
            android:textColor="@color/darkGreyText"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:elevation="2dp"
        android:layout_below="@+id/decrement"
        android:background="@color/darkGreyText" />

</RelativeLayout>