<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recyclerBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                style="@style/ImageButton"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/good_logo"
                android:clickable="true" />

            <TextView
                android:id="@+id/confirm_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:gravity="left|center"
                android:paddingRight="10dp"
                android:text="@string/confirm"
                android:textColor="@color/blackText"
                android:textSize="18dp"
                android:textStyle="bold" />


        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarSettings">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/recyclerBackground">

                <TextView
                    android:id="@+id/notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="bottom"
                    android:text="@string/notifications"
                    android:textColor="@color/greyText"
                    android:textSize="10sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/greySplitter" />
            </RelativeLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout"
                android:background="@color/greySplitter" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/view2"
                android:background="@color/colorPrimary"
                android:elevation="2dp">

                <TextView
                    android:id="@+id/quickly"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="left|center"
                    android:text="@string/importantNews"
                    android:textColor="@color/blackText"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/switch_notifications"
                    android:layout_width="55dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/toggle_selector"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout7"
                android:background="@color/greySplitter" />

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout2"
                android:background="@color/recyclerBackground">

                <TextView
                    android:id="@+id/contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="bottom"
                    android:text="@string/contacts"
                    android:textColor="@color/greyText"
                    android:textSize="10sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/greySplitter" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout3"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="left|center"
                    android:text="@string/mail"
                    android:textColor="@color/blackText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/transparent"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/greySplitter" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout5"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/join"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="left|center"
                    android:text="@string/joinUs"
                    android:textColor="@color/blackText"
                    android:textSize="15sp" />


                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/greySplitter" />

                <TextView
                    android:id="@+id/joinPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/view4"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/view4"
                    android:gravity="center"
                    android:text="@string/joinPhone"
                    android:textColor="@color/transparent"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/joinTestBaseUrl"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/view4"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/view4"
                    android:background="@android:color/transparent"
                    android:inputType="textUri"
                    android:paddingLeft="5dp"
                    android:textColor="@color/greyText"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/changeURLOk"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/joinTestBaseUrl"
                    android:layout_toStartOf="@+id/joinTestBaseUrl"
                    android:background="@color/colorAccent"
                    android:text="Ok"
                    android:textColor="@color/blackText"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout4"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/social"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="left|center"
                    android:text="@string/social"
                    android:textColor="@color/blackText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/socialPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/view5"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/view5"
                    android:gravity="center"
                    android:text="@string/socialPhone"
                    android:textColor="@color/transparent"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/greySplitter" />
            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/relativeLayout7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout6"
                android:background="@color/colorPrimary"
                android:elevation="2dp">

                <TextView
                    android:id="@+id/advertise"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="left|center"
                    android:text="@string/advertise"
                    android:textColor="@color/blackText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/advertisePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/view3"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/view3"
                    android:gravity="center"
                    android:text="@string/advertisePhone"
                    android:textColor="@color/transparent"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/greySplitter" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>