<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseLayout"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/shareViaFB"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/facebook" />

        <ru.klops.klops.custom.TextViewProRegular
            android:id="@+id/facebookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/facebookIcon"
            android:text="@string/facebook"
            android:textColor="@color/darkGreyText"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:id="@+id/splitFacebookVkontakte"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/shareViaFB"
        android:background="@color/darkGreyText" />

    <RelativeLayout
        android:id="@+id/shareViaVK"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_below="@+id/splitFacebookVkontakte"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/vkontakteIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/vkontakte" />

        <ru.klops.klops.custom.TextViewProRegular
            android:id="@+id/vkontakteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/vkontakteIcon"
            android:text="@string/vkontakte"
            android:textColor="@color/darkGreyText"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:id="@+id/splitVkontakteTwitter"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/shareViaVK"
        android:background="@color/darkGreyText" />

    <RelativeLayout
        android:id="@+id/shareViaTW"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_below="@+id/splitVkontakteTwitter"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/twitter" />

        <ru.klops.klops.custom.TextViewProRegular
            android:id="@+id/twitterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/twitterIcon"
            android:text="@string/twitter"
            android:textColor="@color/darkGreyText"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:id="@+id/splitTwitterInstagram"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/shareViaTW"
        android:background="@color/darkGreyText" />

    <RelativeLayout
        android:id="@+id/shareViaIN"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_below="@+id/splitTwitterInstagram"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/instagramIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/instagram" />

        <ru.klops.klops.custom.TextViewProRegular
            android:id="@+id/instagramTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/instagramIcon"
            android:text="@string/instagram"
            android:textColor="@color/darkGreyText"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:elevation="2dp"
        android:layout_below="@+id/shareViaIN"
        android:background="@color/darkGreyText" />
</RelativeLayout>