<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/recyclerBackground"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/exchangeDollar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/exchangeEuro"
        android:layout_weight="0.34"
        android:fillViewport="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginRight="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/exchange">

            <TextView
                android:id="@+id/dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dollar"
                android:textAllCaps="true"
                android:textColor="@color/greyText"
                android:textSize="10sp"
                android:layout_marginTop="15dp" />
            <TextView
                android:id="@+id/dollarPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/dollar"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/darkGreyText"
                android:textSize="26sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exchangeEuro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.34"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/exchange"
            android:gravity="center">

            <TextView
                android:id="@+id/euro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:textAllCaps="true"
                android:textColor="@color/greyText"
                android:textSize="10sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp" />
            <TextView
                android:id="@+id/euroPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/euro"
                android:textAllCaps="true"
                android:textColor="@color/darkGreyText"
                android:textSize="26sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exchangeZlot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/exchangeEuro"
        android:layout_weight="0.34"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/exchange">

            <TextView
                android:id="@+id/zlotiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zlotiy"
                android:textAllCaps="true"
                android:textColor="@color/greyText"
                android:textSize="10sp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:id="@+id/zlotiyPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/zlotiy"
                android:textAllCaps="true"
                android:textColor="@color/darkGreyText"
                android:textSize="26sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>